# ArkanoidProject

./: CMakeLists.txt
arkanoid_1/: CMakeLists.txt  main.cpp  platform.cpp  platform.h
arkanoid_2/: CMakeLists.txt  ball.cpp  ball.h  main.cpp  platform.cpp  text.cpp
arkanoid_3/: CMakeLists.txt  ball.cpp  blocks.cpp  blocks.h  main.cpp  text.cpp
arkanoid_4/: CMakeLists.txt  ball.cpp  ball.h  blocks.cpp  blocks.h  main.cpp  platform.cpp  text.cpp  text.h
arkanoid_5/: CMakeLists.txt  backgraund.cpp  backgraund.h  ball.cpp  ball.h  blocks.cpp  blocks.h  bonuses.cpp  bonuses.h  main.cpp  platform.cpp  platform.h  text.cpp  text.h
